--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
     </dependency>
 
     <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.10.10</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.fazecast</groupId>
       <artifactId>jSerialComm</artifactId>
       <version>[2.0.0,3.0.0)</version>
