--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>log4j-core</artifactId>
       <version>2.3</version>
     </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xmlParserAPIs</artifactId>
+      <version>2.6.2</version>
+    </dependency>
 
   </dependencies>
 
